--- a/Day01/Day01.fsproj
+++ b/Day01/Day01.fsproj
@@ -1,12 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
+    <Compile Include="InverseCaptcha.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-
 </Project>
